# DependencyMappingTool

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
data/dev/: relationships.json
data/dev/services/: api-gateway.json  auth-service.json  inventory-service.json  notification-service.json  order-service.json  payment-gateway.json  postgres-users.json  rabbitmq.json  redis-cache.json  user-service.json
specs/: DependencyMappingTool.cfg  DependencyMappingTool.tla  README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: environments.rs  graph.rs  mod.rs  relationships.rs  services.rs  validation.rs
src-tauri/src/models/: mod.rs  relationship.rs  service.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/storage/: loader.rs  mod.rs
src/components/details/: RelationshipList.tsx  ServiceDetailPanel.tsx
src/components/editor/: DeleteConfirmationModal.tsx  RelationshipEditorModal.tsx  RelationshipForm.tsx  ServiceEditorModal.tsx  ServiceForm.tsx  index.ts
src/components/filters/: FilterPanel.tsx  RelationshipFilter.tsx  ServiceTypeFilter.tsx  StatusFilter.tsx
src/services/: graphTransforms.ts  tauri.ts
src/store/: editorStore.ts  filterStore.ts  graphStore.ts  index.ts  navigationStore.ts  servicesStore.ts
src/styles/: cytoscape-theme.ts  index.css  theme.ts
src/types/: environment.ts  graph.ts  index.ts  modules.d.ts  relationship.ts  service.ts
src/utils/: colors.ts  graphLayout.ts
(+10 files in other folders)
