[package]
name = "dependency-mapping-tool"
version = "0.1.0"
description = "A dependency visualization tool for service interactions"
authors = ["Keith"]
edition = "2021"

[lib]
name = "dependency_mapping_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs"] }
